<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">elbohtim-counter</string>
    <string name="action_settings">Settings</string>
    <string name="loadCounter">Load Counter</string>
    <string name="removeCounter">Remove Counter</string>
    <string name="title_activity_load_counter">LoadCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_counter_list">CounterList</string>
    <string name="name">Create new Counter</string>
    <string name="sendMessage">Create</string>
    <string name="resetCounter">Reset Counter</string>
    <string name="sortCounter">Sort Counters</string>
    <string name="renameCounter">Rename Counter</string>
    <string name="rename">Rename</string>
    <string name="title_activity_statistics">Statistics</string>

</resources>
